...
                }
                .sectionSytle()
                
                if (categoriesViewModel.hasCategories()) {
                    Section(header: Text(Localization.labels.category)) {
                        CategoryPickerView(selectedCategory: $todoFormData.category)
                            .accessibilityIdentifier("TodoFormCategoryPicker")
                    }
                    .sectionSytle()
                }
                
                Section(header: Text(Localization.labels.dueDate)) {
                    DatePicker(Localization.labels.dueDateTooltip, selection: $todoFormData.dueDate, displayedComponents: .date)
                        .foregroundColor(Color.theme.primary)
                        .accessibilityIdentifier("TodoFormDueDateField")
                }
                .sectionSytle()
                
                Section(header: Text(Localization.labels.estimatedTimeForm)) {
                    TextField(Localization.labels.estimatedTimeTooltip, value: $todoFormData.estimatedTime, formatter: NumberFormatter())
                        .keyboardType(.numberPad)
                        .foregroundColor(Color.theme.primary)
                        .accessibilityIdentifier("TodoFormEstimatedTimeField")
                }
                .sectionSytle()
                
                Section(header: Text(Localization.labels.energyImpact)) {
                    HStack {
                        Battery50Icon()
                        Slider(value: Binding(
                            get: { Double(todoFormData.energyImpact ?? 0) },
                            set: { todoFormData.energyImpact = Int64($0) }
                        ), in: -1...1, step: 1)
                        .accessibilityIdentifier("TodoFormEnergyImpactField")
                        Battery100Icon()
                    }
                }
                .sectionSytle()
                
                if existingTodo != nil {
...
                    }
                    presentationMode.wrappedValue.dismiss()
                } label: {
                    Label(existingTodo == nil ? Localization.labels.saveAddTodo : Localization.labels.saveEditTodo, systemImage: "none")
                        .frame(maxWidth: .infinity)
                        .bold()
                        .accessibilityLabel("TodoFormSaveButton")
                }
                .buttonStyle()
                .disabled(todoFormData.title.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty || showErrorTitle || showErrorDetails )
                    
            }
            .appTheme()
...
