...
                        Button(action: {
                            todoViewModel.reorderTodos()
                        }) {
                            CombinedImageView(imageMain: "calendar", imageSmall: "arrow.down")
                                .foregroundColor(Color.theme.primary)
                        }
                        .accessibilityIdentifier("ReorderTodos")
                        
                        Button(action: {
                            showingAddTodo = true
                        }) {
                            Image(systemName: "plus.circle")
                                .foregroundColor(Color.theme.primary)
                        }
                        .accessibilityIdentifier("AddTodoButton")
                    }
                }
            }
            .navigationBarTitleDisplayMode(.inline)
            .accessibilityIdentifier("AllTodosListContainer")
        }
...
